fix overflow

--- a/assets/styles/index.styl
+++ b/assets/styles/index.styl
@@ -19,6 +19,8 @@ html
 html, body
   position relative
   width 100%
+  height 100%
+  overflow hidden
 
 nav
   width 70%
@@ -33,6 +35,10 @@ nav
   a
     color font-color
 
+.wrap
+  height calc( 100% - 110px )
+  overflow hidden
+
 @import "issue"
 @import "logo"
-//@import "overlay"
+@import "overlay"
