--- a/assets/styles/issue.styl
+++ b/assets/styles/issue.styl
@@ -11,9 +11,11 @@ ul
 
 article
   width 650px
+  height 100%
   margin auto
   padding 2rem
   background-color #fff
+  overflow-y scroll
 
   h2:first-type
     padding 0
